--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
                         <li><a href='diff_add_typing.html'>Unified diff core:dev vs beta:origin/add_typing</a></li>
 
+                        <li><a href='diff_backup_huub66.html'>Unified diff core:dev vs beta:origin/backup_huub66</a></li>
+
                         <li><a href='diff_correct_climate.html'>Unified diff core:dev vs beta:origin/correct_climate</a></li>
 
                         <li><a href='diff_fix_250.html'>Unified diff core:dev vs beta:origin/fix_250</a></li>
@@ -27,8 +29,6 @@
                         <li><a href='diff_huub66.html'>Unified diff core:dev vs beta:origin/huub66</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
-
-                        <li><a href='diff_number_core.html'>Unified diff core:dev vs beta:origin/number_core</a></li>
 
                         <li><a href='diff_refact_usb_for_core_2021_8.html'>Unified diff core:dev vs beta:origin/refact_usb_for_core_2021_8</a></li>
 
